# nyc_parking_violation_dbt

./: pyproject.toml
.github/workflows/: run-dbt-prod.yml
notebook/: run_sqql_queries_here.ipynb
nyc_parking_violations/: .user.yml  dbt_project.yml  profiles.yml
nyc_parking_violations/models/bronze/: bronze_parking_violation_codes.sql  bronze_parking_violations.sql
nyc_parking_violations/models/example/: first_model.sql  ref_model.sql
nyc_parking_violations/models/gold/: gold_ticket_metrics.sql  gold_vehicles_metrics.sql
nyc_parking_violations/models/silver/: silver_parking_violation_codes.sql  silver_parking_violations.sql  silver_violation_tickets.sql  silver_violation_vehicles.sql
nyc_parking_violations/tests/: violation_codes_revenue.sql
nyc_parking_violations/tests/generic/: generic_not_null.sql
