[tool.poetry]
name = "data-engineering-with-dbt"
version = "0.1.0"
description = ""
authors = ["Yusuf Raheem <yusufraheem500@gmail.com>"]
readme = "README.md"
package-mode = false  # optional, prevents poetry from requiring "packages"

[tool.poetry.dependencies]
python = ">=3.12"
dbt-core = ">=1.10.10,<2.0.0"
dbt-duckdb = ">=1.9.4,<2.0.0"
duckdb = ">=1.3.2,<2.0.0"
requests = ">=2.32.5,<3.0.0"
pandas = "^2.3.2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
